# rome

./: Cargo.toml  README.md
.claude/: settings.local.json
benches/: store_flush.rs  vs_tokio_watch.rs
crates/diagnostic/: Cargo.toml
crates/entity/: Cargo.toml
crates/entity/src/: context.rs  lib.rs  meta.rs  world.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: action.rs  lib.rs  select.rs  store.rs  trigger.rs
crates/task/: Cargo.toml  README.md
crates/task/src/: cancel.rs  cell.rs  error.rs  execute.rs  join.rs  lib.rs  pool.rs  result.rs  run.rs  source.rs  state.rs  status.rs  thread.rs
crates/task/src/internal/: channel.rs  mod.rs  run.rs  thread.rs
crates/task/src/metrics/: latency.rs  mod.rs  pool.rs  task.rs  thread.rs
crates/task/src/pool/: command.rs  config.rs  event.rs  metrics.rs  mod.rs
crates/task/src/sync/: time.rs
crates/time/: Cargo.toml
crates/time/src/: fixed.rs
docs/: 00.state.md
src/: cancel.rs  context.rs  diagnostic.rs  entity.rs  event.rs  lib.rs  runtime.rs  store.rs  tick.rs  world.rs
src/action/: entity.rs  mod.rs  system.rs
src/context/: entity.rs  mod.rs
src/schedule/: mod.rs  sequence.rs
src/state/: access.rs  action.rs  arc_cell.rs  buffer.rs  dispatch.rs  mod.rs  record.rs  select.rs  source.rs  store.rs  trigger.rs
src/state/action/: mod.rs
src/state/signal/: mod.rs  read.rs  select.rs
src/state/signal/operator/: map.rs  mod.rs
src/state/signals/: mod.rs  stream.rs
src/state/signals/adapters/: state.rs
src/state/source/: mod.rs  stream.rs
src/state/source/operator/: map.rs  mod.rs
src/time/: fixed.rs  mod.rs
