[package]
name = "rome"
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.github.com/aacebo/rome"
homepage = "https://www.github.com/aacebo/rome"
repository = "https://www.github.com/aacebo/rome"

[lib]
doctest = false

[dependencies]
wgpu = "29"
rayon = "1"
futures = "0.3"
crossbeam = "0.8"
serde = { version = "1", features = ["rc", "derive"] }
arc-swap = { version = "1.9", features = ["serde", "weak"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }

[[bench]]
name = "store_flush"
path = "benches/store_flush.rs"

[[bench]]
name = "vs_tokio_watch"
path = "benches/vs_tokio_watch.rs"
