[package]
name = "ayr-task"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
crossbeam = "0.8"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
